Code clean up with imageRekognizer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+spring.h2.console.path=/h2-console
+springdoc.api-docs.path=/api-docs
 logging.level.org.springframework=info
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+app.manage.images.filestore=/Users/srinivasanvaradharajan/Projects/FileStore/
